# ssh-wrap-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: check.yml
examples/: use_wezterm_ssh.rs
src/: lib.rs  wezterm_ssh.rs
